# IOPG

./: CMakeLists.txt  main.cpp
build_PG/: BAMG.cpp  BAMG.h  NSG.cpp  NSG.h  ProximityGraph.cpp  ProximityGraph.h
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
data_layout/: DataLayout.cpp  DataLayout.h  PQ.cpp  PQ.h
datasets/deep1M/: build.sh  search.sh
